hamma uchun alohida div ochildi

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 
 <body>
-  <h1>Hello world</h1>
-  <img src="img/picGirl4.jpg" alt="">
-  <i>It's a good idea</i>
-  <p>I will change the world</p>
+  <div id="bekki"></div>
+  <div id="shayx"></div>
+  <div id="jovohir"></div>
+  <div id="qutbiddin"></div>
+  <div id="feruz"></div>
 </body>
 
 </html>
