--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <body>
   <div id="bekki"></div>
-  <div id="shayx"></div>
+  <div id="shayx">
+    <h1>Mani codlarimga ozgarish kiritmela</h1>
+  </div>
   <div id="jovohir"></div>
   <div id="qutbiddin"></div>
   <div id="feruz"></div>
