--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-
+<!-- Iltimos qilamiz hamma oziga moljallangan divda ishlansin -->
 <body>
   <div id="bekki"></div>
   <div id="shayx">
