--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <div id="shayx">
     <h1>Mani codlarimga ozgarish kiritmela</h1>
   </div>
-  <div id="jovohir"></div>
+  <div id="jovohir">
+    sdhfueofe
+  </div>
   <div id="qutbiddin"></div>
   <div id="feruz"></div>
 </body>
