--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <!-- Iltimos qilamiz hamma oziga moljallangan divda ishlansin -->
 <body>
+  <h2>Hello world</h2>
   <div id="bekki"></div>
   <div id="shayx">
     <h1>Mani codlarimga ozgarish kiritmela</h1>
