Hammasini bowqattan qlamiz

--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
 </head>
 <!-- Iltimos qilamiz hamma oziga moljallangan divda ishlansin -->
 <body>
-  <h2>Hello world</h2>
   <div id="bekki"></div>
-  <div id="shayx">
-    <h1>Mani codlarimga ozgarish kiritmela</h1>
-  </div>
-  <div id="jovohir">
-    sdhfueofe
-  </div>
-  <p>it's me</p>
+  <div id="shayx"></div>
+  <div id="jovohir"> </div>
   <div id="qutbiddin"></div>
   <div id="feruz"></div>
 </body>
