--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <div id="shayx"></div>
   <div id="jovohir"> </div>
   <div id="qutbiddin"></div>
-  <div id="feruz"></div>
+  <div id="feruz">
+    <h1>Feruz zaratken azgina qoldi</h1>
+  </div>
 </body>
 
 </html>
