--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Document</title>
 </head>
 <!-- Iltimos qilamiz hamma oziga moljallangan divda ishlansin -->
+<!-- Saytni qisqa muddat ichida tugatib hostingga qoyib yuborish kerak shuning uchun hamma oz vazifasini oz vaqtida bajaring -->
 <body>
   <div id="bekki"></div>
   <div id="shayx"></div>
